--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Cristiano | ICS2O-Unit0-00-HTML | Date 2022 -->
+<!-- Cristiano | ICS2O-Unit6-02-HTML | May 16 2022 -->
 <html lang="en-ca">
   <head>
     <meta charset="utf-8">
@@ -8,39 +8,46 @@
     <meta name="author" content="Cristiano Sellitto">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#FFFFFF" />
-    <link rel="canonical" href="https://cristianosellitto.github.io/<RESPITORY>/" />
-    <link rel="manifest" href="/<RESPITORY>/manifest.webmanifest" />
+    <link rel="canonical" href="https://cristianosellitto.github.io/ICS2O-Unit6-02-HTML/" />
+    <link rel="manifest" href="/ICS2O-Unit6-02-HTML/manifest.webmanifest" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" media="none" onload="if(media!='all')media='all'"><noscript><link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"></noscript>
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css" media="none" onload="if(media!='all')media='all'"><noscript><link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css"></noscript>
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
-    <title>My Website</title>
+    <title>Simple Cookie Clicker</title>
   </head>
-  <body>
+  <body onload="updateCount()">
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script src="./js/script.js"></script>
     <div class="mdl-layout mdl-js-layout">
       <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
         <header class="mdl-layout__header">
           <div class="mdl-layout__header-row">
-            <span class="mdl-layout-title">My Website</span>
+            <span class="mdl-layout-title">Simple Cookie Clicker</span>
             <div class="mdl-layout-spacer"></div>
-            <nav class="mdl-navigation mdl-layout--large-screen-only">
-              <a class="mdl-navigation__link" href="./">Index</a>
-            </nav>
           </div>
         </header>
+        <img src="./images/cookie.jpg" alt="Clickable Cookie" onclick="onClick()" width="10%">
+      </div>
+      <br>
+      <br>
+      <br>
+      <div id="times-clicked-text">
+        <h5>Times Clicked: 0</h5>
       </div>
     </div>
-    <br>
-    <br>
-    <br>
-    <h3>Hello, World!</h3>
     <!-- Accent-colored raised button with ripple -->
-    <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" onclick="onButtonClick()">
-      Alert
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" onclick="resetProgress()">
+      Reset Progress
     </button>
   </body>
 </html>
